--- a/prueba.ipynb
+++ b/prueba.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,440 +11,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('Datasets/clean/siniestos_limpio.csv')"
+    "df = pd.read_csv('Datasets/clean/siniestos_limpio_2.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Id</th>\n",
-       "      <th>Fecha</th>\n",
-       "      <th>Año</th>\n",
-       "      <th>Mes</th>\n",
-       "      <th>Día</th>\n",
-       "      <th>Día semana</th>\n",
-       "      <th>Hora completa</th>\n",
-       "      <th>Hora</th>\n",
-       "      <th>Num víctimas</th>\n",
-       "      <th>Participantes</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Calle</th>\n",
-       "      <th>Cruce</th>\n",
-       "      <th>Dirección normalizada</th>\n",
-       "      <th>Comuna</th>\n",
-       "      <th>Xy (caba)</th>\n",
-       "      <th>Coordenada x</th>\n",
-       "      <th>Coordenada y</th>\n",
-       "      <th>Pos x</th>\n",
-       "      <th>Pos y</th>\n",
-       "      <th>Semestre con anio</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>712</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>713</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>714</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>715</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>716</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>717 rows × 29 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      Id Fecha  Año  Mes  Día Día semana Hora completa  Hora  Num víctimas  \\\n",
-       "0    NaN   NaN  NaN  NaN  NaN        NaN           NaN   NaN           NaN   \n",
-       "1    NaN   NaN  NaN  NaN  NaN        NaN           NaN   NaN           NaN   \n",
-       "2    NaN   NaN  NaN  NaN  NaN        NaN           NaN   NaN           NaN   \n",
-       "3    NaN   NaN  NaN  NaN  NaN        NaN           NaN   NaN           NaN   \n",
-       "4    NaN   NaN  NaN  NaN  NaN        NaN           NaN   NaN           NaN   \n",
-       "..   ...   ...  ...  ...  ...        ...           ...   ...           ...   \n",
-       "712  NaN   NaN  NaN  NaN  NaN        NaN           NaN   NaN           NaN   \n",
-       "713  NaN   NaN  NaN  NaN  NaN        NaN           NaN   NaN           NaN   \n",
-       "714  NaN   NaN  NaN  NaN  NaN        NaN           NaN   NaN           NaN   \n",
-       "715  NaN   NaN  NaN  NaN  NaN        NaN           NaN   NaN           NaN   \n",
-       "716  NaN   NaN  NaN  NaN  NaN        NaN           NaN   NaN           NaN   \n",
-       "\n",
-       "    Participantes  ... Calle Cruce Dirección normalizada Comuna  Xy (caba)  \\\n",
-       "0             NaN  ...   NaN   NaN                   NaN    NaN        NaN   \n",
-       "1             NaN  ...   NaN   NaN                   NaN    NaN        NaN   \n",
-       "2             NaN  ...   NaN   NaN                   NaN    NaN        NaN   \n",
-       "3             NaN  ...   NaN   NaN                   NaN    NaN        NaN   \n",
-       "4             NaN  ...   NaN   NaN                   NaN    NaN        NaN   \n",
-       "..            ...  ...   ...   ...                   ...    ...        ...   \n",
-       "712           NaN  ...   NaN   NaN                   NaN    NaN        NaN   \n",
-       "713           NaN  ...   NaN   NaN                   NaN    NaN        NaN   \n",
-       "714           NaN  ...   NaN   NaN                   NaN    NaN        NaN   \n",
-       "715           NaN  ...   NaN   NaN                   NaN    NaN        NaN   \n",
-       "716           NaN  ...   NaN   NaN                   NaN    NaN        NaN   \n",
-       "\n",
-       "    Coordenada x Coordenada y Pos x Pos y Semestre con anio  \n",
-       "0            NaN          NaN   NaN   NaN               NaN  \n",
-       "1            NaN          NaN   NaN   NaN               NaN  \n",
-       "2            NaN          NaN   NaN   NaN               NaN  \n",
-       "3            NaN          NaN   NaN   NaN               NaN  \n",
-       "4            NaN          NaN   NaN   NaN               NaN  \n",
-       "..           ...          ...   ...   ...               ...  \n",
-       "712          NaN          NaN   NaN   NaN               NaN  \n",
-       "713          NaN          NaN   NaN   NaN               NaN  \n",
-       "714          NaN          NaN   NaN   NaN               NaN  \n",
-       "715          NaN          NaN   NaN   NaN               NaN  \n",
-       "716          NaN          NaN   NaN   NaN               NaN  \n",
-       "\n",
-       "[717 rows x 29 columns]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df[df.isna()]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_filled = df.fillna(\"S/D\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Id                       0\n",
-       "Fecha                    0\n",
-       "Año                      0\n",
-       "Mes                      0\n",
-       "Día                      0\n",
-       "Día semana               0\n",
-       "Hora completa            0\n",
-       "Hora                     0\n",
-       "Num víctimas             0\n",
-       "Participantes            0\n",
-       "Rol                      0\n",
-       "Acusado                  0\n",
-       "Victima                  0\n",
-       "Sexo                     0\n",
-       "Edad                     0\n",
-       "Rango etario             0\n",
-       "Fecha fallecimiento      0\n",
-       "Lugar del hecho          0\n",
-       "Tipo de calle            0\n",
-       "Calle                    0\n",
-       "Cruce                    0\n",
-       "Dirección normalizada    0\n",
-       "Comuna                   0\n",
-       "Xy (caba)                0\n",
-       "Coordenada x             0\n",
-       "Coordenada y             0\n",
-       "Pos x                    0\n",
-       "Pos y                    0\n",
-       "Semestre con anio        0\n",
-       "dtype: int64"
+       "Num víctimas\n",
+       "1    676\n",
+       "2     38\n",
+       "3      3\n",
+       "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_filled.isna().sum()"
+    "df['Num víctimas'].value_counts()"
    ]
   }
  ],
